src/css/games/kingoftokyo.less
@import "./common";

html[data-theme=dark] {
	--ext-overall-color: #00000080;

	#active-expansions-button {
		background: #737373;
	}

	.kot-card .bottom,
	.kot-curse-card .bottom,
	.kot-curse-card .bottom>*,
	.kot-evolution .bottom,
	.kot-evolution .bottom>*,
	.kot-tile .bottom,
	.kot-tile .bottom>* {
		filter: invert(1);
	}

	.kot-card[data-design=dark-edition] .bottom {
		filter: none;
	}

	.kot-card .description-wrapper,
	.kot-curse-card .description-wrapper,
	.kot-evolution .description-wrapper,
	.kot-tile .description-wrapper {
		color: var(--light-80);
	}

	.pick-evolution-cards {
		background: var(--dark-back);
		box-shadow: 0 0 5px 5px #4d4d4dcc;
	}

	.pick-evolution-cards:before {
		border-color: #000 transparent;
	}

	.pick-evolution-cards .kot-evolution .description-wrapper,
	#see-monster-evolutions .kot-evolution .description-wrapper {
		color: #000;
	}

	.dice-icon {
		filter: var(--highlight-min);
	}

	#zoom-wrapper #zoom-controls {
		filter: invert(0.8);
	}

	#monster-pick .monster-group,
	#table #table-center #full-board #board #twoPlayersVariant-message {
		background: var(--dark-back);
	}

	#popin_showActivatedExpansions {
		background: var(--dark-10);
	}

	#popin_showActivatedExpansions h2 {
		color: var(--light-80);
	}

	.card,
	.monster-figure,
	.monster-board {
		filter: var(--ext-bright);
	}

	.autoSkipPlayEvolutionBubble .autoSkipPlayEvolution-option .label-detail.spe-warning {
		color: var(--red-10);
	}

	.card .card-sides .card-side {
		box-shadow: none;
		filter: var(--drop-shadow);
	}
}

